--- a/projeckt.css
+++ b/projeckt.css
@@ -1,74 +1,164 @@
-
-
-p{
+p.header{
     color: brown;
-   border-bottom: 2px solid black;font-weight: bolder;
-}
-.header {
-  
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    
-}
+   border-bottom: 2px solid black;font-weight: bolder;}
+body{
 
-.headeri{
-    flex-direction: row;
 }
 .fotografit{
-    padding-top: 10%;
+   
     display: flex;
-    flex-direction: row;
-   justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 3%;
 }
-   .rubrika{max-width: 80%;
+
+   .rubrika{
+  
+    justify-content: space-evenly;
 
    }
-   .permifooter{
+  .bgfoto{
     display: flex;
-    justify-content:space-evenly;
-   }
-   .bgfoto{
-    display: flex;
-    justify-content:flex-end;
-   }
-   .menu{
-    width: 500px;
-    display: flex;
-    height: 70px;
-    
-    justify-content: space-between;
+    justify-content: end;
    
    }
-   ol{ 
-    padding-top: 10%;
-    padding-bottom: 9px;
-    margin: 10%;
-    border: 3px solid black;
-    
-    /* border-top: 3px solid black;
-    border-right:3px solid black;
-    border-bottom:3px solid black;
-    border-left: 3px solid black; */
-    
-    
+   .latestvideo{
+    display: flex;
+    justify-content: flex-end;
+   content: 12px;;
 
    }
+  
+   .catalog{
+    justify-content: center;
+   }
+  .permifooter{ 
+   
+    display: flex;
+    justify-content: space-between;
+    background: #424242;
+    border: 1px solid #424242;
+    border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+    margin: 1%;
+  }
+  
+   .fotografit>.rubrika{
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+   }
+   .fotografit>.rubrika2{box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+   }
+   
+   .fotografit>.rubrika3{box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+   }
+   
+   
+   .fotografit>.rubrika4{box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+   }
+   
+    
    ol >li{
+    display: flex;
     list-style: none;
     margin-left: 70px;
     margin-top: 30px;
-    font-size: 15px;
-   }
-   ol > li > a{
-    text-decoration: none;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    transition: 0.3s ease-in-out;
-
-   }
-   ol > li > a:hover{
-    color: blue;
-   
+    flex-direction: row-reverse;
 }
+ .footerright{
+    display: flex;
+    align-items: flex-end;
+
+ }
+ .fundi{
+    display: flex;
+    justify-content: flex-end;
+ }
+
+   
+    
+
+  
+
+
+
+  
+   
+  
+.latestvideo{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+   
+
+ 
+}
+
+.fundi{
+    display: flex;
+    flex-direction: row;
+    
+
+}
+.f{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    background-color: dimgrey;
+}
+.f>.ff{
+    margin-left: 5% ;
+    margin-right: 5%;
+    display: flex;
+    flex-direction: column;
+
+}
+h3>.f{
+    display: flex;
+    flex-direction: row;
+}
+
+.rubrika{
+    flex-grow: 1
+    flex: 200;
+}
+
+.p{
+    margin: 1%;
+    padding-left: 20px;
+   
+  }
+ 
+  .dd{
+      background-image:url(AdobeStock_277931111_Preview.jpeg);
+      color: red;
+      display: flex;
+      margin: 0.04%;
+      justify-content: center; 
+      padding: 0.04%;
+      justify-content: space-around;
+  }
+ 
+  
+  .headeri{
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+ margin: 30px 0;
+ padding: 20px 0;
+  }
+ 
+    .f3{
+        
+        border: 1px solid black;
+        margin: 1%;
+    }
+  .f4{
+  display: flex;
+  justify-content: center;
+ 
+  
+  
+
+  }
