--- a/projeckt.css
+++ b/projeckt.css
@@ -1,3 +1,9 @@
+
+body{
+  
+}
+
+
 p>.header{
     color: brown;
    border-bottom: 2px solid black;font-weight: bolder;}
@@ -86,12 +92,11 @@ p>.header{
 
     display: flex;
     align-items: center;
-  
     flex-direction:row;
-    justify-content: space-between;
+    gap: 30%;
 
 }
-.f>.ff{
+.ff{
     margin-left: 5% ;
     margin-right: 5%;
     display: flex;
@@ -122,7 +127,7 @@ p>.f{
       margin: 0.04%;
       justify-content: center; 
       padding: 0.04%;
-      justify-content: space-around;
+     
   }
  .headerii{
   width:100% ;
@@ -141,12 +146,10 @@ p>.f{
       align-items: center;
       justify-content: flex-end;
       color: black;
-     
-     
-  gap: 50px;
-  list-style: none;
+      gap: 50px;
+      list-style: none;
  }
- li>a{
+.menu1>li>a{
   color: black;
   position: relative;
   text-decoration: none;
@@ -178,47 +181,58 @@ p>.f{
       justify-content: center;
       align-items: center;
      
-      margin: 30px 30;
+      margin: 00 0px;
       padding: 20px 30;
   }
   .catalog{
     justify-content: center;
    }
-   p>.catalog>.headeri{
-   te
-
-   }
+ 
   .menu{
      display: flex;
   }
  
-    .f3{
-        
-        border: 1px solid black;
-        margin: 1%;
-        background-color: darkgray;
-    }
-  .f4{
+
+.fi{
+  
+ 
+}
+  
+  
+  .title{
+   
+    
+
+  } 
+  .f3{
+    
+     display: flex;
+      width: 100%;
+      border: 1px solid black;
+      height: 40px;
+      align-items: center;
+    
+     
+     
+      background-color: darkgray;
+      justify-content: space-evenly;
+      margin-bottom: 20px;
+  }
+
+.label{
+
+  
+}
+
+.ac1{
   display: flex;
+  justify-content: space-evenly;
+}
+
+.control{ 
+  display: flex;
+  justify-content: space-evenly;
   
-  content: normal;
-  flex-direction: row;
-  }
-  .fi{
-    display: flex;
-    justify-content:center;
-    flex-direction: row;
-  }
-  .label{
-    display: flex;
-
-  }
-  .control{
-
-  }
-  .ac1{
-    justify-content: flex-end;
   
-  }
-
+}
   
