--- a/main/projeckt.css
+++ b/main/projeckt.css
@@ -1,14 +1,24 @@
 
 body{
-  background-color: #868181;
+ background-color: #1c1c1c;
+ 
   
+
+ 
 }
+*{
+  padding: 0%;
+  margin: 0%;
+  color: azure;
+}
+
+
 
 
 p>.header{
     color: brown;
-   border-bottom: 2px solid black;font-weight: bolder;}
-
+   border-bottom: 2px solid black;font-weight: older;}
+b
 .fotografit{
   
    padding: 3%;
@@ -188,7 +198,7 @@ p>.f{
   height: 60px;
   padding: 0 40px;
   box-sizing: border-box;
- 
+  color-scheme:initial;
   border: 1px solid  ;
   border-radius: 10px;
  
