--- a/log in/Log in.css
+++ b/log in/Log in.css
@@ -1,6 +1,9 @@
 
 body{
- background-image: src(""); 
+ flex: wrap;
+ justify-content: center;
+ align-items: center;
+ padding-top: 25%;
 }
 
 .h1{
@@ -24,18 +27,19 @@ body{
 }
 .h3{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  text-align: center;
 }
-.h4{
-  display: flex;
-  flex-direction: column-reverse;
-}
+
 .h5{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  text-align: center;
 }
 .h6{
   display: flex;
+  flex-direction: column;
+  text-align: center;
   
 
 }
