--- a/Sign up/signup.css
+++ b/Sign up/signup.css
@@ -24,15 +24,15 @@ body{
 }
 .h3{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 .h4{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 .h5{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 .h6{
   display: flex;
