--- a/home page/projeckt.css
+++ b/home page/projeckt.css
@@ -1,6 +1,6 @@
 
 body{
- background-color: #1c1c1c;
+ /* background-color: #1c1c1c; */
  
   
 
@@ -9,7 +9,7 @@ body{
 *{
   padding: 0%;
   margin: 0%;
-  color: azure;
+
 }
 
 
@@ -20,11 +20,11 @@ p>.header{
    border-bottom: 2px solid black;font-weight: older;}
 b
 .fotografit{
-  
-   padding: 3%;
-   padding-bottom: 2%;
-
+  width: 100%;
+    padding: 3%;
+    padding-bottom: 2%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 2%;
@@ -36,48 +36,16 @@ b
  
 }
 
+
+
+
   
-  .bgfoto{
+.t1{
     display: flex;
-    justify-content: end;
-   
-   }
-
-   .latestvideo{
-    display: flex;
-    justify-content: flex-end;
-   content: 12px;
-
-   }
-   .t1{
-    display: flex;
+  
     justify-content: center;
     align-items: center;
    }
-   .f9{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-   }
-   .b22{
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font: 10pt;
-    color: red;
-   }
-  
- 
-  .permifooter{ 
-   
-    display: flex;
-    justify-content: space-between;
-    background: #424242;
-    border: 1px solid #424242;
-    border-radius: 6px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    margin: 1%;
-  }
 
   .rubrika3{
    background: transparent;
@@ -259,10 +227,7 @@ p>.f{
   }
  
 
-.fi{
-  
- 
-}
+
 button{
   
  
@@ -291,10 +256,6 @@ button{
       margin-bottom: 20px;
   }
 
-.label{
-
-  
-}
 
 .ac1{
   display: flex;
