--- a/home page/projeckt.css
+++ b/home page/projeckt.css
@@ -1,63 +1,83 @@
 
-body{
- /* background-color: #1c1c1c; */
- 
+.t1{
   
-
- 
 }
-*{
-  padding: 0%;
-  margin: 0%;
-
-}
-
-
-
 
 p>.header{
     color: brown;
    border-bottom: 2px solid black;font-weight: older;}
-b
+
 .fotografit{
-  width: 100%;
-    padding: 3%;
-    padding-bottom: 2%;
+  /* border: 2px outset black; */
+  border-radius: 7px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 2%;
-    margin: 3%;
+    gap: 5%;
+    margin: 4%;
+    padding: 5%;
     list-style: none;
     position: relative;
     overflow: hidden;
-    background-size:auto:
+    background-size:auto;
+    justify-content: center;
+    background-color: rgb(240, 240, 240);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+    
  
+}
+.yy{
+  display: flex;
+  justify-content: center;
+}
+
+.photo-container {
+ 
+  width: 300px; 
+  height: 300px; 
+  overflow: hidden;
+  position: relative;
+}
+
+.photo-list {
+  display: flex;
+  transition: transform 0.5s ease-in-out; 
+}
+
+.photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.new1{
+  display: flex;
+  justify-content: center;
+  margin: 2%;
+  margin-top: 5%;
 }
 
 
 
-
-  
 .t1{
     display: flex;
-  
+   margin: 4%;
+   margin-top: 8%;
     justify-content: center;
     align-items: center;
    }
 
-  .rubrika3{
+  .rubrika{
    background: transparent;
-  }
+   
+ 
+  } 
   
    .fotografit>.rubrika>a{
-
-    
-        color: black;
+    color: black;
     position: relative;
     text-decoration: none;
-   
    }
    .fotografit>.rubrika2>a{
   
@@ -94,7 +114,6 @@ b
 
    }
    .fotografit>.rubrika6>a{
-  
     color: black;
     position: relative;
     text-decoration: none;
@@ -102,16 +121,17 @@ b
    }
    
    
-    
+
+
  
 
- .footerright{
+ /* .footerright{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
- }
+ } */
 
 
 .fundi{
@@ -122,15 +142,20 @@ b
 }
 .f{
 
+width: 100%;
     display: flex;
     align-items: center;
     flex-direction:row;
-    gap: 30%;
+    justify-content: space-evenly;
+  ; 
+  
+    border-radius: 7px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    
 
 }
 .ff{
-    margin-left: 5% ;
-    margin-right: 5%;
+    
     display: flex;
     flex-direction:column;
     justify-content: space-evenly;
@@ -159,6 +184,8 @@ p>.f{
       margin: 0.04%;
       justify-content: center; 
       padding: 0.04%;
+      margin: 2%;
+      border-radius: 9px;
      
   }
  .headerii{
@@ -244,16 +271,18 @@ button{
   .f3{
     
      display: flex;
-      width: 100%;
-      border: 1px solid black;
+    padding: 1%;
+     
+     /* border: 1px  solid#333; */
       height: 40px;
       align-items: center;
+    border-radius: 5px;
     
      
-     
-      background-color: darkgray;
+     background-color: rgb(240, 240, 240);
       justify-content: space-evenly;
       margin-bottom: 20px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   }
 
 
@@ -268,4 +297,39 @@ button{
   
   
 }
+.p44{ 
+
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 3%;
+}
+.about-section {
+ width: 97%;
+  /* margin: auto; */
+  margin-top: 20px;
+  text-align: center;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.about-section h2 {
+  color: #333;
+}
+
+.about-section p {
+  color: #666;
+}
+.about-section1 {
   
+  width: 90%;
+ 
+ 
+ margin: 5%;
+  background-color: #fff;
+ 
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
