--- a/Regjistrimi/Register.css
+++ b/Regjistrimi/Register.css
@@ -8,6 +8,17 @@
   background-color: red;  
   }
 }
+.Banner{
+  background-image: url(Banner.jpeg);
+  color: red;
+  display: flex;
+
+  justify-content: center;
+  padding: 0.4%;
+  margin: 2%;
+  border-radius: 9px;
+
+}
 h1{
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
@@ -117,4 +128,11 @@ h1{
 .confirm-password{
   display: flex;
   flex-direction: c;
+}
+.Copyright{
+  display: flex;
+  flex-direction: row;
+}.Fund{
+  display: flex;
+  justify-items: center;
 }
