--- a/log in/LogIN.css
+++ b/log in/LogIN.css
@@ -1,72 +1,73 @@
 
-body{
- flex: wrap;
- justify-content: center;
- height: 100pv;
- 
- align-items: center;
- margin: 0%;
-}
-
-.h1{
+@media screen (zoom :150%){
   
- padding-top: 5%;
-  display: flex;
-
-  justify-content: center;
-  align-items: center;
- 
-  max-width: 100%
 }
+
 .h2{
-  padding-top:5%;
-  padding-bottom: 5%;
-  padding-right: 35%;
-  padding-left: 35%;
-  border: 5px solid violet;
-  
-  border-style: groove;
-
- 
+  padding-top:10% ;
+padding-bottom: 20%;
+  flex: wrap;
+  flex-wrap: line;
+ background-clip: ;
   display: flex;
-  flex-direction: column;
+flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  background-clip: url(jaja.mp4) ;
 
+}
+.task{
+  border: 5px solid violet; 
+  border-radius: 7%;
+  border-style:groove; 
+  padding: 15%;
 }
 .UserName{
   display: flex;
-  height;
   flex-direction: column;
-  text-align: center;
-  padding-bottom: 15%;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  position: relative;
 }
-
 .password{
   display: flex;
   flex-direction: column;
-  text-align: center;
-  padding-bottom: 20%;
+  align-items: center;  
+  font-size: 20px;
+  padding: 5%;
 }
-.LOGIN{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
- 
-  padding-bottom: 20%;
-}
-.button{
-  font-size: 16px;
+.signup{
+  display: flex;
+
+ justify-content: center;
   cursor: pointer;
-  padding: 10px 25px;
-  border: none;
-  font-family: sans-serif;
-  
+  position: relative;
   
 }
-.passwordError{
+.Banner{
+  background-image: url(PHOTObanner.jpeg);
   color: red;
-  margin-top: -10px;
-  margin-bottom: 10px;
-  margin-left: 45px;
+  display: flex;
+
+  justify-content: center;
+  padding: 0.4%;
+  margin: 2%;
+  border-radius: 9px;
+
 }
+.Copyright{
+  display: flex;
+  flex-direction: row;
+  gap: 50%;
+}
+.video{
+  position: fixed;
+  
+  
+}
+
+
+
+ 
+
