--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -1,8 +1,21 @@
-body{
-   background-image: url(backgroundPICC.png);
+@media screen and (max-width: 768px) {
+   body{
+      background-color: black;
+   }
+  
    
-}
-
+  }
+  .Banner{
+   background-image: url(Banner.jpeg);
+   color: red;
+   display: flex;
+ 
+   justify-content: center;
+   padding: 0.4%;
+   margin: 2%;
+   border-radius: 9px;
+ 
+ }
 .container{
    display: flex;
    flex-wrap: wrap;
