--- a/Regjistrimi/Register.css
+++ b/Regjistrimi/Register.css
@@ -1,13 +1,10 @@
-@media only screen and(max-width:480px) {
-  .Register{
-    background-color: lightblue;
+@media screen and (max-width: 768px) {
+  body{
+     background-color: black;
   }
-}
-@media ( max-width: 80%) {
-  .Register{
-  background-color: red;  
-  }
-}
+ 
+  
+ }
 .Banner{
   background-image: url(Banner.jpeg);
   color: red;
@@ -16,7 +13,7 @@
   justify-content: center;
   padding: 0.4%;
   margin: 2%;
-  border-radius: 9px;
+
 
 }
 h1{
