--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -6,14 +6,14 @@
    
   }
   .Banner{
-   background-image: url(Banner.jpeg);
+   background-image: url(Wallpaper.jpeg);
    color: red;
    display: flex;
- 
+  
    justify-content: center;
    padding: 0.4%;
    margin: 2%;
-   border-radius: 9px;
+   
  
  }
 .container{
@@ -31,27 +31,18 @@
    padding-top: 15px;
    padding-bottom: 25px;
 }
-.img{
 
 
-}
-.foto1{
-
-}
 .backgroundPIC{
-   height: 5cm;
-
-   background-color: gray;
-
-}
-.backgroundPIC{
-   background-image: url(banner.png);
    
+   background-color: violet;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
+   padding: 3%;
+   margin-left: 15%;
+   margin-right: 15%;
 }
 .SPACE{
      width: 10cm;
@@ -110,6 +101,7 @@ justify-content: space-evenly;
       }
       .tek1{
          display: flex;
+         flex-direction: row;
          justify-content: center;
          color: white;
          font-family: Arial, Helvetica, sans-serif;
