--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -54,16 +54,19 @@ display: flex;
 flex-direction: column;
 border: 1px solid black;
 flex-wrap: wrap;
-background-color: violet;
+background-image:src="ITEM-Background.jpg";
 border: 5px solid blueviolet;
 width: 100%;
 height: 100%;
+padding: 2%;
+
 
 }
 .FirstBracket{
    margin: 10px;
    width: 100%;
  display: flex;
+ 
  flex-direction: row;
 justify-content: space-evenly;
 
@@ -72,7 +75,7 @@ justify-content: space-evenly;
 }
 .SecondBracket{
    margin: 10px;
-   width: 100%;
+
    display: flex;
    
    flex-direction: row;
@@ -83,7 +86,7 @@ justify-content: space-evenly;
    }
    .TripleBracket{
       margin: 10px;
-      width: 100%;
+      
       
       display: flex;
       justify-content: space-evenly;
@@ -101,10 +104,21 @@ justify-content: space-evenly;
       }
       .tek1{
          display: flex;
+         flex-wrap: wrap;
          flex-direction: row;
          justify-content: center;
+         align-content: center;
          color: white;
          font-family: Arial, Helvetica, sans-serif;
+         margin: 15px;
+         
+      }
+ 
+         
+      
+      
+         
+         
       }
       
 
