--- a/about us/aboutus.css
+++ b/about us/aboutus.css
@@ -1,14 +1,4 @@
- 
-  .dd{
-    background-image:url(AdobeStock_277931111_Preview.jpeg);
-    color: red;
-    display: flex;
-    margin: 0.04%;
-    justify-content: center; 
-    padding: 0.04%;
-    margin: 2%;
-   
-}
+
 .menu{
     display: flex;
     flex-direction: row;
@@ -20,10 +10,6 @@
     padding-left: 3% ;
       display: flex;
       justify-content: flex-start;
-    
-  
-     
-     
   }
   .catalog{
     display: flex;
@@ -31,20 +17,43 @@
 
    }
 
-
+.u1{
+    display: flex;
+    gap: 2%;
+}
    .about-section {
-    max-width: 800px;
+ display: flex;
     margin: auto;
+    justify-content: flex-start;
     text-align: center;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
 
+}
+.our{
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    gap: 15%;
+    margin-left: 30px;
+}
+.s55{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 .about-section h2 {
     color: #333;
 }
+h2{
+    margin: 3%;
+    display: flex;
+justify-content: center;}
 
 
 .about-section p {
@@ -61,38 +70,13 @@
         
         
    }
-   .menu1>li>a{
-    color: black;
-    position: relative;
-    text-decoration: none;
+   .home{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
    }
-   li>a:after{
-    content:"";
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: -4px;
-    left: 0;
-    background-color: black;
-    transform-origin: bottom right;
-    transition:transform 0.3s ease-out;
-  
-   }
-   li>a:hover:after{
-    transform: scaleX(1);
-    transform-origin: bottom left;
-   }
-   .headerii{
-    width:100% ;
-    height: 60px;
-    padding: 0 40px;
-    box-sizing: border-box;
-    color-scheme:initial;
-    border: 1px solid  ;
-    border-radius: 10px;
-   
-   }
+
    .dd{
     background-image:url(AdobeStock_277931111_Preview.jpeg);
     color: red;
