--- a/home page/projeckt.css
+++ b/home page/projeckt.css
@@ -147,7 +147,7 @@ width: 100%;
     align-items: center;
     flex-direction:row;
     justify-content: space-evenly;
-  ; 
+  width: 100%; 
   
     border-radius: 7px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -158,12 +158,14 @@ width: 100%;
     
     display: flex;
     flex-direction:column;
-    justify-content: space-evenly;
+     gap: 30%;
+    
    
 }
-p>.f{
+h4>.f>.ff{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 .f6{
   flex-direction: row;
@@ -327,7 +329,6 @@ button{
   width: 90%;
  
  
- margin: 5%;
   background-color: #fff;
  
   border-radius: 8px;
