--- a/about us/aboutus.css
+++ b/about us/aboutus.css
@@ -86,5 +86,43 @@ justify-content: center;}
     padding: 0.04%;
     margin: 2%;
     border-radius: 9px;
-    */
+    
 }
+.f{
+margin: 10px;
+padding: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction:row;
+        justify-content: space-evenly;
+      width: 100%; 
+      
+        border-radius: 7px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+     gap: 30%;
+    
+    }
+    .ff{
+        
+        display: flex;
+        flex-direction:column;
+      
+        
+       
+    }
+    h4>.f>.ff{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .f6{
+        width: 100%;
+        flex-direction: row;
+        gap: 30%;
+      }
+      .fundi{
+        display: flex;
+        flex-direction: row;
+        
+    
+    }
