--- a/Regjistrimi/Register.css
+++ b/Regjistrimi/Register.css
@@ -5,6 +5,36 @@
  
   
  }
+ .navbar{
+   
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: solid rgb(166, 165, 165);
+  
+ }
+ .navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-top: 15px;
+ 
+ }
+ .navbar .right{
+  float: right;
+ }
+ .navbar a:hover {
+     background-color: #ddd;
+     color: black  ;
+}
+.navbar a.active{
+  background-color: #4caf50;
+  color: white;
+}
 .Banner{
   background-image: url(Banner.jpeg);
   color: red;
@@ -13,6 +43,7 @@
   justify-content: center;
   padding: 0.4%;
   margin: 2%;
+  margin-top: 8%;
 
 
 }
@@ -35,6 +66,8 @@ h1{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   border: 5px solid violet;
   border-radius: 5%;
+  background-image: url('ITEM-Background.jpg');
+  color: white;
   padding: 5%;
   margin-left: 15%;
   margin-right: 15%;
