--- a/log in/LogIN.css
+++ b/log in/LogIN.css
@@ -6,6 +6,45 @@
  
   
  }
+ .navbar{
+   
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: solid rgb(166, 165, 165);
+  
+ }
+ .navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  margin-top: 15px;
+ 
+ }
+ .navbar .right{
+  float: right;
+ }
+ .navbar a:hover {
+     background-color: #ddd;
+     color: black  ;
+}
+.navbar a.active{
+  background-color: #4caf50;
+  color: white;
+}
+
+.buttong:hover{
+  background-color: darkblue;
+
+}
+button:active{
+  background-color: green;
+  
+}
 
 .h2{
   padding-top:10% ;
@@ -17,14 +56,16 @@ padding-bottom: 20%;
 flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-clip: url(jaja.mp4) ;
+
 
 }
 .task{
+  background-image: url(ITEM-Background.jpg);
   border: 5px solid violet; 
   border-radius: 7%;
   border-style:groove; 
   padding: 15%;
+
 }
 .UserName{
   display: flex;
@@ -43,7 +84,7 @@ flex-direction: column;
 }
 .signup{
   display: flex;
-
+  
  justify-content: center;
   cursor: pointer;
   position: relative;
@@ -53,10 +94,11 @@ flex-direction: column;
   background-image: url(PHOTObanner.jpeg);
   color: red;
   display: flex;
-
+  
   justify-content: center;
   padding: 0.4%;
   margin: 2%;
+  margin-top: 8%;
   border-radius: 9px;
 
 }
@@ -64,6 +106,31 @@ flex-direction: column;
   display: flex;
   flex-direction: row;
   gap: 50%;
+}
+.Register{
+  display: flex;
+  justify-content: center;
+  margin-top: -15%;
+  margin-bottom: 20%;
+  
+}
+.button{
+  display: inline-block;
+  font-size: 20px;
+  
+  padding: 10px 20px;
+
+  cursor: pointer;
+}
+.button-wr{
+  background-color: yellow;
+  border: none;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: underline;
+  display: inline-block;
+  font-size: 17px ;
+  cursor: pointer;
 }
 
 
