--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -17,7 +17,7 @@
   .Banner{
  margin-top: 8%;
    display: flex;
-   background-image: url(Wallpaper.jpeg);
+   background-image: url();
    margin-left: 20px;
    margin-right: 20px;
    color: red;
