--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -182,6 +182,17 @@
         margin-top: 2%;
         width: 100%;
       }
+      #b1{
+      margin-bottom: 20px;
+      
+      color: black;
+      width: 100px;
+      height: 45px;
+      border:none;
+  } 
+  #b1 a{
+      color:black;
+  }
 
      
        
