--- a/log in/LogIN.css
+++ b/log in/LogIN.css
@@ -135,6 +135,7 @@ label{
   padding: 15px 30px;
   text-align: center;
   text-decoration: underline;
+  outline: 5%;
   display: inline-block;
   font-size: 17px ;
   cursor: pointer;
