--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -134,7 +134,7 @@
       .Main{ 
         
         flex-wrap: wrap;
-        background-image: url(ITEM-Background.jpg);
+        background-image: url();
        width: 100%;
         display: flex;
         align-content: center;
@@ -166,7 +166,7 @@
       }
       .SEcond{
         display: flex;
-        background-image: url(ITEM-Background.jpg);
+        background-image: url();
         flex-wrap: wrap;
         flex-direction: column;
         margin-top: 2%;
@@ -175,7 +175,7 @@
 
       }
       .third{
-        background-image: url(ITEM-Background.jpg);
+        background-image: url();
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
