--- a/page of sell/PajisjetNeShitje.css
+++ b/page of sell/PajisjetNeShitje.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
    body{
       background-color: black;
    }
@@ -14,6 +14,7 @@
 
    
   }
+*/
   .Banner{
  margin-top: 8%;
    display: flex;
