--- a/home page/projeckt.css
+++ b/home page/projeckt.css
@@ -1,7 +1,13 @@
 
-.t1{
+@media screen and (max-width: 768px) {
+  body{
+     background-color: yellow;
+     
+     flex-wrap:wrap;
+  }
+ 
   
-}
+ }
 
 p>.header{
     color: brown;
