--- a/LogIN.css
+++ b/LogIN.css
@@ -7,127 +7,97 @@
   
  }
 
- .navbar{
-   
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  border-bottom: solid rgb(166, 165, 165);
-  
- }
- .navbar a {
-  float: left;
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body{
   display: flex;
-  color: black;
-  text-align: center;
   justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.formular{
+  width: 420px;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  backdrop-filter: blur(50px);
+  color: #fff;
+  border-radius: 12px;
+  padding: 30px 40px;
+}
+.formular h1{
+  font-size: 36px;
+  text-align: center;
+  color: black;
+  margin-bottom: 10px;
+}
+.formular .input-box{
+  position: relative;
+  width: 100%;
+  height: 50px;
+  
+  margin: 20px 0;
+}
+.input-box input{
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, .2);
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+}
+.formular label{
+  color: black;
 
+}
+.input-box input::placeholder{
+  color: #fff;
+}
+.formular .remember-forgot{
+  display: flex;
+  justify-content: space-between;
+  font-size: 14.5px;
+  margin: -15px 0 15px;
+}
+.remember-forgot label input{
+  accent-color: #fff;
+  margin-right: 3px;
 
+}
+.remember-forgot a{
+  color: black;
   text-decoration: none;
 
- 
- }
- .navbar .right{
-  float: right;
- }
- .navbar a:hover {
-     background-color: #ddd;
-     color: black  ;
 }
-.navbar a.active{
-  background-color: #4caf50;
-  color: white;
+.remember-forgot a:hover{
+  text-decoration: underline;
 }
-
-.buttong:hover{
-  background-color: darkblue;
-
-}
-button:active{
-  background-color: green;
-  
-}
-
-.h2{
-
-
-
-
-  flex: wrap;
-  flex-wrap: line;
- background-clip: ;
-  display: flex;
-flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-
-}
-label{
-  color: white;
-}
-.task{
-  background-image: url(ITEM-Background.jpg);
-  border: 5px solid violet; 
-  border-radius: 7%;
-  border-style:groove; 
-  padding: 15%;
-
-}
-.UserName{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  position: relative;
-  
-}
-.password{
-  display: flex;
-  flex-direction: column;
-  align-items: center;  
-  font-size: 20px;
-  padding: 5%;
-}
-.signup{
-  display: flex;
-  justify-content: center;
-  margin-top: -15%;
-  margin-bottom: 20%;
-  color: black;
-  
-}
-.signup label{
-  color: black;
-}
-
-.Copyright{
-  display: flex;
-  flex-direction: row;
-  gap: 50%;
-}
-.Register{
-  display: flex;
-  justify-content: center;
- 
-  margin-bottom: 20%;
-  
-}
-.button{
-  display: inline-block;
- 
-  color: black;
-  
-
-  
+.formular .btn{
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
 }
-
-
-
-
-
- 
-
+#register{
+margin-left: 143px;
+text-decoration:none;
+margin-top: 10px;
+color: black;
+}
