--- a/Register.css
+++ b/Register.css
@@ -7,158 +7,97 @@
  
   
  }
- .navbar{
-   
-  overflow: hidden;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  border-bottom: solid rgb(166, 165, 165);
-  
- }
- .navbar a {
-  float: left;
-  display: block;
-  color: black;
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url(bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.formular{
+  width: 420px;
+  background: transparent;
+  border: 2px solid rgba(255, 255, 255, .2);
+  backdrop-filter: blur(50px);
+  color: #fff;
+  border-radius: 12px;
+  padding: 30px 40px;
+}
+.formular h1{
+  font-size: 36px;
   text-align: center;
-  padding: 14px 16px;
+  color: black;
+  margin-bottom: 10px;
+}
+.formular .input-box{
+  position: relative;
+  width: 100%;
+  height: 50px;
+  
+  margin: 20px 0;
+}
+.input-box input{
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, .2);
+  border-radius: 40px;
+  font-size: 16px;
+  color: #fff;
+  padding: 20px 45px 20px 20px;
+}
+.formular label{
+  color: black;
+
+}
+.input-box input::placeholder{
+  color: #fff;
+}
+.formular .remember-forgot{
+  display: flex;
+  justify-content: space-between;
+  font-size: 14.5px;
+  margin: -15px 0 15px;
+}
+.remember-forgot label input{
+  accent-color: #fff;
+  margin-right: 3px;
+
+}
+.remember-forgot a{
+  color: black;
   text-decoration: none;
-  margin-top: 15px;
- 
- }
- .navbar .right{
-  float: right;
- }
- .navbar a:hover {
-     background-color: #ddd;
-     color: black  ;
-}
-.navbar a.active{
-  background-color: #4caf50;
-  color: white;
-}
-.Banner{
-  background-image: url(Banner.jpeg);
-  color: red;
-  display: flex;
-
-  justify-content: center;
-  padding: 0.4%;
-  margin: 2%;
-  margin-top: 8%;
-
 
 }
-h1{
-  display: flex;
-  font-family: Arial, Helvetica, sans-serif;
-  justify-content: center;
-  align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
-
+.remember-forgot a:hover{
+  text-decoration: underline;
 }
-
-.Register{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: larger;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: 5px solid violet;
-  border-radius: 5%;
-  background-image: url('ITEM-Background.jpg');
-  color: white;
-  padding: 5%;
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-bottom: 15%;
- 
- 
-  
-}
-.Register input{
-  font-size: 15px;
-}
-.Emri{
-  display: flex;
-  padding:2%;
-  align-items: center;
-  flex-direction: column;
-
-
-}
-.Mbiemri{
-  display: flex;
-  padding: 2%;
-  
-  align-items: center;
-  flex-direction: column;
-
-}
-.Email{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 2%;
-}
-.Vitilindjes{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 2%;
-  
-}
-.Gjinia{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2%;
-}
-
-.Titull{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin-top: 7%;
-
-}
-
-.Perzgjidhje{
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  padding-left: 25%;
-}
-.Regjistrohu{
-  padding: 15px;
+.formular .btn{
+  width: 100%;
+  height: 45px;
+  background: #fff;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   cursor: pointer;
-  border-radius: 30px;
-  
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
 }
-.Password{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2%;
- 
-}
-.User{
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2%;
-}
-.confirm-password{
-  display: flex;
-  flex-direction: c;
-}
-.Copyright{
-  display: flex;
-  flex-direction: row;
-}.Fund{
-  display: flex;
-  justify-items: center;
+#register{
+margin-left: 143px;
+text-decoration:none;
+margin-top: 10px;
+color: black;
 }
