--- a/LogIN.css
+++ b/LogIN.css
@@ -18,10 +18,11 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url(bg.jpg) no-repeat;
+  background: url(1616588204_35-p-fon-magiya-39.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
+
 .formular{
   width: 420px;
   background: transparent;
