--- a/deals.css
+++ b/deals.css
@@ -15,6 +15,69 @@
       border-radius: 9px;
      
   }
+  .t1{
+    display: flex;
+   margin: 4%;
+   margin-top: 8%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+   
+   }
+
+  .rubrika{
+   background: transparent;
+   
+ 
+  } 
+  
+   .fotografit>.rubrika>a{
+    color: black;
+    position: relative;
+    text-decoration: none;
+   }
+   .fotografit>.rubrika2>a{
+  
+    color: black;
+    position: relative;
+    text-decoration: none;
+ 
+  
+   }
+   
+   .fotografit>.rubrika3>a{
+
+    color: black;
+    position: relative;
+    text-decoration: none;
+  
+
+   }
+   
+   
+   .fotografit>.rubrika4>a{
+ 
+    color: black;
+    position: relative;
+    text-decoration: none;
+
+   }
+   
+   .fotografit>.rubrika5>a{
+  
+    color: black;
+    position: relative;
+    text-decoration: none;
+
+   }
+   .fotografit>.rubrika6>a{
+    color: black;
+    position: relative;
+    text-decoration: none;
+
+   }
+   
+   
  .headerii{
   width:100% ;
   height: 60px;
