--- a/LogIN.css
+++ b/LogIN.css
@@ -18,7 +18,7 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url(1616588204_35-p-fon-magiya-39.jpg) no-repeat;
+  background: url(pMAiU.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
